# time-manager-bot

./: .gitignore  Dockerfile  api.py  bot.py  config.py  create_bot.py  docker-compose.yml  exe.env  logs.py  main.py  middleware.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2ee10f37d618_add_model_useractionorm.py  d6c3ac7235a6_startup.py
database/: database.py
database/models/: __init__.py  user_action.py
handlers/: __init__.py  start.py  user_action.py
repository/: user_action.py
schemas/: __init__.py  user_action.py
tests/: test_to_ics.py
utils/: to_ics.py
volumes/user_ics/: 2002268318.ics
